--- a/Claims2.ServiceLayer/Claims2.ServiceLayer.csproj
+++ b/Claims2.ServiceLayer/Claims2.ServiceLayer.csproj
@@ -7,12 +7,23 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.4">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Claims2.DataLayer\Claims2.DataLayer.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="App.Config">
+        <SubType>Designer</SubType>
+      </None>
     </ItemGroup>
 
 </Project>
