--- a/Claims2.App/Claims2.App.csproj
+++ b/Claims2.App/Claims2.App.csproj
@@ -12,6 +12,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="10.4.0" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
       <PackageReference Include="MudBlazor" Version="6.0.9" />
     </ItemGroup>
 
